# REST

./: CMakeLists.txt  lib.txt  readMe.txt
DFG/: 1300_0.txt  300_0.txt
LS/: LS.cpp  LS.h  LSMain.cpp  readInput.cpp
checker/: checker.cpp  checker.h
